[package]
name = "reactinator"
version = "0.1.0"
edition = "2021"
default-run = "reactinator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reactinator"

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"